--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - appnope=0.1.0
+  - attrs=19.3.0
   - backcall=0.2.0
   - backports=1.0
   - backports.functools_lru_cache=1.6.1
@@ -15,7 +17,9 @@ dependencies:
   - decorator=4.4.2
   - fftw=3.3.8
   - gsl=2.6
+  - iniconfig=1.0.1
   - ipython_genutils=0.2.0
+  - joblib=0.16.0
   - krb5=1.17.1
   - libblas=3.8.0
   - libcblas=3.8.0
@@ -24,6 +28,7 @@ dependencies:
   - libedit=3.1.20191231
   - libev=4.33
   - libffi=3.2.1
+  - libgfortran=4.0.0
   - liblapack=3.8.0
   - libnghttp2=1.41.0
   - libopenblas=0.3.10
@@ -32,23 +37,33 @@ dependencies:
   - line_profiler=3.0.2
   - llvm-openmp=10.0.1
   - memory_profiler=0.57.0
+  - more-itertools=8.4.0
   - namaster=1.0.2
   - ncurses=6.2
   - numpy=1.19.1
   - openssl=1.1.1g
+  - packaging=20.4
   - pexpect=4.8.0
   - pickleshare=0.7.5
   - pip=20.2.2
+  - pluggy=0.13.1
   - psutil=5.7.2
   - ptyprocess=0.6.0
+  - py=1.9.0
   - pygments=2.6.1
+  - pyparsing=2.4.7
+  - pytest=6.0.1
   - python=3.8.5
   - python_abi=3.8
   - readline=8.0
+  - scikit-learn=0.23.2
+  - scipy=1.5.2
   - setuptools=49.2.0
   - six=1.15.0
   - sqlite=3.33.0
+  - threadpoolctl=2.1.0
   - tk=8.6.10
+  - toml=0.10.1
   - traitlets=4.3.3
   - wcwidth=0.2.5
   - wheel=0.34.2
@@ -58,7 +73,6 @@ dependencies:
     - absl-py==0.9.0
     - astropy==4.0.1.post1
     - astunparse==1.6.3
-    - attrs==19.3.0
     - bleach==3.1.5
     - cachetools==4.1.1
     - chardet==3.0.4
@@ -97,7 +111,6 @@ dependencies:
     - numba==0.50.1
     - oauthlib==3.1.0
     - opt-einsum==3.3.0
-    - packaging==20.4
     - pandas==1.1.0
     - pandocfilters==1.4.2
     - parso==0.7.1
@@ -107,7 +120,6 @@ dependencies:
     - protobuf==3.12.4
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
-    - pyparsing==2.4.7
     - pyrsistent==0.16.0
     - python-dateutil==2.8.1
     - pytz==2020.1
@@ -117,7 +129,6 @@ dependencies:
     - requests==2.24.0
     - requests-oauthlib==1.3.0
     - rsa==4.6
-    - scipy==1.5.2
     - send2trash==1.5.0
     - tensorboard==2.3.0
     - tensorboard-plugin-wit==1.7.0
